--- a/index.html
+++ b/index.html
@@ -773,19 +773,25 @@ quest"
           <div class="footer__social-network">
             <h3 class="footer__title footer__title--inline">Social Network</h3>
             <div class="footer__social-links">
-              <a href="#" class="footer__social-link"
+              <a
+                href="https://web.facebook.com/gloacademy1/?_rdc=1&_rdr"
+                class="footer__social-link"
                 ><img
                   src="img/facebook.svg"
                   alt="Icon: facebook"
                   class="footer__icon"
               /></a>
-              <a href="#" class="footer__social-link"
+              <a
+                href="https://www.youtube.com/channel/UCVswRUcKC-M35RzgPRv8qUg"
+                class="footer__social-link"
                 ><img
                   src="img/youtube.svg"
                   alt="Icon: youtube"
                   class="footer__icon"
               /></a>
-              <a href="#" class="footer__social-link"
+              <a
+                href="https://www.instagram.com/accounts/login/?next=/globeautyacademy/"
+                class="footer__social-link"
                 ><img
                   src="img/instagram.svg"
                   alt="Icon: instagram"
