--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container">
         <div class="navbar-top">
           <a
-            href="#"
+            href="index.html"
             class="logo navbar__logo"
             data-aos="fade-right"
             data-aos-offset="300"
