--- a/index.html
+++ b/index.html
@@ -178,11 +178,7 @@
             </p>
           </div>
           <!-- /.hotel-info__left -->
-          <div
-            data-toggle="modal"
-            data-href="#feedback"
-            class="rating hotel-info__rating"
-          >
+          <div class="rating hotel-info__rating">
             <span class="rating__text">User Rattings</span>
             <span class="rating__counter"
               >4.5/<span class="rating__counter-small">5</span></span
@@ -309,6 +305,245 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
+    <section class="packages">
+      <div class="container">
+        <h2 class="packages-title">Other Packages</h2>
+        <div class="packages-wrapper">
+          <div class="card packages-card packages-card__big">
+            <div class="packages-img">
+              <img
+                src="img/packages/other.jpg"
+                alt="Hotel Blue Haven"
+                class="packages-card__img"
+              />
+            </div>
+            <div class="packages-item">
+              <div class="packages-rating">
+                <img src="img/star.svg" alt="stars" />
+                <img src="img/star.svg" alt="stars" />
+                <img src="img/star.svg" alt="stars" />
+                <img src="img/star.svg" alt="stars" />
+                <img src="img/star.svg" alt="stars" />
+              </div>
+              <h3 class="packages-card__title">
+                Hotel Blue Haven
+              </h3>
+              <p class="packages-text">
+                Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur
+                enim laborum magna llit. Ipsum est fugiat velit ea llamco do
+                esse ut in veniam sun in onsequat. Aute quis duis epteur
+                excepteur ipsum occaecat eiusmod nsectetur enim laborum magna
+                mollit. Ipsum est fugiat velit ea ullamco do
+              </p>
+              <div class="packages-person">
+                <span class="packages-person__address">
+                  <img
+                    src="img/mark.svg"
+                    alt="Icon: mark"
+                    class="packages-person__user"
+                  />1749 Wheeler Ridge Delaware</span
+                >
+                <span class="packages-person__guests">
+                  <img
+                    src="img/user.svg"
+                    alt="Icon: user"
+                    class="packages-person__user"
+                  />2 x Guests</span
+                >
+                <span class="packages-person__room"
+                  ><img
+                    src="img/home.svg"
+                    alt="Icon: home"
+                    class="packages-person__home"
+                  />1 x Room</span
+                >
+              </div>
+              <div class="packages-prise">
+                <span class="packages-price__old">$ 10,500</span>
+                <strong class="packages-price__new">$ 8,500</strong>
+              </div>
+              <button class="packages-card__button">Book Now</button>
+            </div>
+          </div>
+          <!--/.card-->
+          <div class="card packages__card">
+            <div class="packages-img">
+              <img
+                src="img/packages/other-2.jpg"
+                alt="LUX* Belle Mare"
+                class="packages-card__img"
+              />
+            </div>
+            <div class="packages-item">
+              <h3 class="packages-card__title">
+                LUX* Belle Mare
+              </h3>
+              <div class="packages-person">
+                <span class="packages-person__address">
+                  <img
+                    src="img/mark.svg"
+                    alt="Icon: user"
+                    class="packages-person__user"
+                  />1749 Wheeler Ridge Delaware</span
+                >
+                <span class="packages-person__guests">
+                  <img
+                    src="img/user.svg"
+                    alt="Icon: user"
+                    class="packages-person__user"
+                  />2 x Guests</span
+                >
+                <span class="packages-person__room"
+                  ><img
+                    src="img/home.svg"
+                    alt="Icon: home"
+                    class="packages-person__home"
+                  />1 x Room</span
+                >
+              </div>
+              <div class="packages-prise">
+                <span class="packages-price__old">$ 8,500</span>
+                <strong class="packages-price__new">$ 3,000</strong>
+              </div>
+              <button class="packages-card__button">Book Now</button>
+            </div>
+          </div>
+          <!-- /.card-->
+          <div class="card packages__card">
+            <div class="packages-img">
+              <img
+                src="img/packages/other-3.jpg"
+                alt="White Palace"
+                class="packages-card__img"
+              />
+            </div>
+            <div class="packages-item">
+              <h3 class="packages-card__title">
+                White Palace
+              </h3>
+              <div class="packages-person">
+                <span class="packages-person__address">
+                  <img
+                    src="img/mark.svg"
+                    alt="Icon: user"
+                    class="packages-person__user"
+                  />1749 Wheeler Ridge Delaware</span
+                >
+                <span class="packages-person__guests">
+                  <img
+                    src="img/user.svg"
+                    alt="Icon: user"
+                    class="packages-person__user"
+                  />2 x Guests</span
+                >
+                <span class="packages-person__room"
+                  ><img
+                    src="img/home.svg"
+                    alt="Icon: home"
+                    class="packages-person__home"
+                  />1 x Room</span
+                >
+              </div>
+              <div class="packages-prise">
+                <span class="packages-price__old">$ 10,500</span>
+                <strong class="packages-price__new">$ 9,500</strong>
+              </div>
+              <button class="packages-card__button">Book Now</button>
+            </div>
+          </div>
+          <!--/.card-->
+          <div class="card packages__card">
+            <div class="packages-img">
+              <img
+                src="img/packages/other-4.jpg"
+                alt="Luxury Place"
+                class="packages-card__img"
+              />
+            </div>
+            <div class="packages-item">
+              <h3 class="packages-card__title">
+                Luxury Place
+              </h3>
+              <div class="packages-person">
+                <span class="packages-person__address">
+                  <img
+                    src="img/mark.svg"
+                    alt="Icon: user"
+                    class="packages-person__user"
+                  />1749 Wheeler Ridge Delaware</span
+                >
+                <span class="packages-person__guests">
+                  <img
+                    src="img/user.svg"
+                    alt="Icon: user"
+                    class="packages-person__user"
+                  />2 x Guests</span
+                >
+                <span class="packages-person__room"
+                  ><img
+                    src="img/home.svg"
+                    alt="Icon: home"
+                    class="packages-person__home"
+                  />1 x Room</span
+                >
+              </div>
+              <div class="packages-prise">
+                <span class="packages-price__old">$ 4,500</span>
+                <strong class="packages-price__new">$ 2,500</strong>
+              </div>
+              <button class="packages-card__button">Book Now</button>
+            </div>
+          </div>
+          <!--/.card-->
+          <div class="card packages__card">
+            <div class="packages-img">
+              <img
+                src="img/packages/other-5.jpg"
+                alt="Hotel Five Star"
+                class="packages-card__img"
+              />
+            </div>
+            <div class="packages-item">
+              <h3 class="packages-card__title">
+                Hotel Five Star
+              </h3>
+              <div class="packages-person">
+                <span class="packages-person__address">
+                  <img
+                    src="img/mark.svg"
+                    alt="Icon: user"
+                    class="packages-person__user"
+                  />1749 Wheeler Ridge Delaware</span
+                >
+                <span class="packages-person__guests">
+                  <img
+                    src="img/user.svg"
+                    alt="Icon: user"
+                    class="packages-person__user"
+                  />2 x Guests</span
+                >
+                <span class="packages-person__room"
+                  ><img
+                    src="img/home.svg"
+                    alt="Icon: home"
+                    class="packages-person__home"
+                  />1 x Room</span
+                >
+              </div>
+              <div class="packages-prise">
+                <span class="packages-price__old">$ 6,500</span>
+                <strong class="packages-price__new">$ 3,500</strong>
+              </div>
+              <button class="packages-card__button">Book Now</button>
+            </div>
+          </div>
+          <!--/.card-->
+        </div>
+        <!-- /.packages-wrapper -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.packages -->
 
     <section class="newsletter">
       <div class="newsletter-wrapper">
@@ -852,54 +1087,7 @@
       <!-- /.modal__dialog -->
     </div>
     <!-- /.modal -->
-    <div class="modal" id="feedback">
-      <div class="modal__overlay"></div>
-      <!-- /.modal__overlay -->
-      <div class="modal__dialog">
-        <a href="#" class="modal__close">
-          <img src="img/close.svg" alt="Icon: close" class="modal__img" />
-        </a>
-        <h3 class="modal__title modal__title--mb-3">Feedback</h3>
-        <form action="send.php" method="POST" class="modal__forma form">
-          <input
-            type="text"
-            class="input modal__input"
-            placeholder="Your Full Name*"
-            name="name"
-            required
-            minlength="2"
-          />
-          <input
-            type="tel"
-            class="input modal__input phone"
-            placeholder="Phone Number*"
-            name="phone"
-            required
-            minlength="16"
-          />
-          <input
-            type="email"
-            class="input modal__input"
-            placeholder="Email*"
-            name="email"
-            required
-          />
-          <textarea
-            class="message modal__message"
-            placeholder="Message"
-            name="message"
-          ></textarea>
-          <div class="modal__send">
-            <button class="button modal__button" type="submit">
-              Send
-            </button>
-            <span class="modal__info">*&nbsp;Required&nbsp;Fields</span>
-          </div>
-        </form>
-      </div>
-      <!-- /.modal__dialog -->
-    </div>
-    <!-- /.modal -->
+
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ce1dd235-e572-4749-895b-1a4eca042bcb&lang=ru_RU"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/parallax.min.js"></script>
