--- a/index.html
+++ b/index.html
@@ -188,12 +188,7 @@
         </div>
         <!-- /.hotel-info -->
         <div class="hotel-grid">
-          <div
-            class="swiper-container hotel-slider hotel__slider"
-            data-aos="fade-right"
-            data-aos-offset="300"
-            data-aos-easing="ease-in-sine"
-          >
+          <div class="swiper-container hotel-slider hotel__slider">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
@@ -245,12 +240,7 @@
           <!-- /.swiper-container -->
 
           <div class="hotel-shell">
-            <div
-              class="booking"
-              data-aos="fade-left"
-              data-aos-offset="500"
-              data-aos-easing="ease-in-sine"
-            >
+            <div class="booking">
               <div class="booking-price">
                 <span class="booking-price__starts">price starts as</span>
                 <strong class="booking-price__pricetag">$ 8,500</strong>
@@ -296,7 +286,11 @@
               <!-- /.booking-booton -->
             </div>
             <!-- /.booking -->
-            <div class="map" id="map"></div>
+            <div class="map">
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.6061410598268!2d79.84287911534405!3d6.937586094987594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae25920c53a5e23%3A0x56efc3724db4f567!2sGrand%20Oriental%20Hotel!5e0!3m2!1sru!2sru!4v1596635378267!5m2!1sru!2sru"
+              ></iframe>
+            </div>
             <!-- /.map -->
           </div>
         </div>
@@ -305,245 +299,6 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
-    <section class="packages">
-      <div class="container">
-        <h2 class="packages-title">Other Packages</h2>
-        <div class="packages-wrapper">
-          <div class="card packages-card packages-card__big">
-            <div class="packages-img">
-              <img
-                src="img/packages/other.jpg"
-                alt="Hotel Blue Haven"
-                class="packages-card__img"
-              />
-            </div>
-            <div class="packages-item">
-              <div class="packages-rating">
-                <img src="img/star.svg" alt="stars" />
-                <img src="img/star.svg" alt="stars" />
-                <img src="img/star.svg" alt="stars" />
-                <img src="img/star.svg" alt="stars" />
-                <img src="img/star.svg" alt="stars" />
-              </div>
-              <h3 class="packages-card__title">
-                Hotel Blue Haven
-              </h3>
-              <p class="packages-text">
-                Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur
-                enim laborum magna llit. Ipsum est fugiat velit ea llamco do
-                esse ut in veniam sun in onsequat. Aute quis duis epteur
-                excepteur ipsum occaecat eiusmod nsectetur enim laborum magna
-                mollit. Ipsum est fugiat velit ea ullamco do
-              </p>
-              <div class="packages-person">
-                <span class="packages-person__address">
-                  <img
-                    src="img/mark.svg"
-                    alt="Icon: mark"
-                    class="packages-person__user"
-                  />1749 Wheeler Ridge Delaware</span
-                >
-                <span class="packages-person__guests">
-                  <img
-                    src="img/user.svg"
-                    alt="Icon: user"
-                    class="packages-person__user"
-                  />2 x Guests</span
-                >
-                <span class="packages-person__room"
-                  ><img
-                    src="img/home.svg"
-                    alt="Icon: home"
-                    class="packages-person__home"
-                  />1 x Room</span
-                >
-              </div>
-              <div class="packages-prise">
-                <span class="packages-price__old">$ 10,500</span>
-                <strong class="packages-price__new">$ 8,500</strong>
-              </div>
-              <button class="packages-card__button">Book Now</button>
-            </div>
-          </div>
-          <!--/.card-->
-          <div class="card packages__card">
-            <div class="packages-img">
-              <img
-                src="img/packages/other-2.jpg"
-                alt="LUX* Belle Mare"
-                class="packages-card__img"
-              />
-            </div>
-            <div class="packages-item">
-              <h3 class="packages-card__title">
-                LUX* Belle Mare
-              </h3>
-              <div class="packages-person">
-                <span class="packages-person__address">
-                  <img
-                    src="img/mark.svg"
-                    alt="Icon: user"
-                    class="packages-person__user"
-                  />1749 Wheeler Ridge Delaware</span
-                >
-                <span class="packages-person__guests">
-                  <img
-                    src="img/user.svg"
-                    alt="Icon: user"
-                    class="packages-person__user"
-                  />2 x Guests</span
-                >
-                <span class="packages-person__room"
-                  ><img
-                    src="img/home.svg"
-                    alt="Icon: home"
-                    class="packages-person__home"
-                  />1 x Room</span
-                >
-              </div>
-              <div class="packages-prise">
-                <span class="packages-price__old">$ 8,500</span>
-                <strong class="packages-price__new">$ 3,000</strong>
-              </div>
-              <button class="packages-card__button">Book Now</button>
-            </div>
-          </div>
-          <!-- /.card-->
-          <div class="card packages__card">
-            <div class="packages-img">
-              <img
-                src="img/packages/other-3.jpg"
-                alt="White Palace"
-                class="packages-card__img"
-              />
-            </div>
-            <div class="packages-item">
-              <h3 class="packages-card__title">
-                White Palace
-              </h3>
-              <div class="packages-person">
-                <span class="packages-person__address">
-                  <img
-                    src="img/mark.svg"
-                    alt="Icon: user"
-                    class="packages-person__user"
-                  />1749 Wheeler Ridge Delaware</span
-                >
-                <span class="packages-person__guests">
-                  <img
-                    src="img/user.svg"
-                    alt="Icon: user"
-                    class="packages-person__user"
-                  />2 x Guests</span
-                >
-                <span class="packages-person__room"
-                  ><img
-                    src="img/home.svg"
-                    alt="Icon: home"
-                    class="packages-person__home"
-                  />1 x Room</span
-                >
-              </div>
-              <div class="packages-prise">
-                <span class="packages-price__old">$ 10,500</span>
-                <strong class="packages-price__new">$ 9,500</strong>
-              </div>
-              <button class="packages-card__button">Book Now</button>
-            </div>
-          </div>
-          <!--/.card-->
-          <div class="card packages__card">
-            <div class="packages-img">
-              <img
-                src="img/packages/other-4.jpg"
-                alt="Luxury Place"
-                class="packages-card__img"
-              />
-            </div>
-            <div class="packages-item">
-              <h3 class="packages-card__title">
-                Luxury Place
-              </h3>
-              <div class="packages-person">
-                <span class="packages-person__address">
-                  <img
-                    src="img/mark.svg"
-                    alt="Icon: user"
-                    class="packages-person__user"
-                  />1749 Wheeler Ridge Delaware</span
-                >
-                <span class="packages-person__guests">
-                  <img
-                    src="img/user.svg"
-                    alt="Icon: user"
-                    class="packages-person__user"
-                  />2 x Guests</span
-                >
-                <span class="packages-person__room"
-                  ><img
-                    src="img/home.svg"
-                    alt="Icon: home"
-                    class="packages-person__home"
-                  />1 x Room</span
-                >
-              </div>
-              <div class="packages-prise">
-                <span class="packages-price__old">$ 4,500</span>
-                <strong class="packages-price__new">$ 2,500</strong>
-              </div>
-              <button class="packages-card__button">Book Now</button>
-            </div>
-          </div>
-          <!--/.card-->
-          <div class="card packages__card">
-            <div class="packages-img">
-              <img
-                src="img/packages/other-5.jpg"
-                alt="Hotel Five Star"
-                class="packages-card__img"
-              />
-            </div>
-            <div class="packages-item">
-              <h3 class="packages-card__title">
-                Hotel Five Star
-              </h3>
-              <div class="packages-person">
-                <span class="packages-person__address">
-                  <img
-                    src="img/mark.svg"
-                    alt="Icon: user"
-                    class="packages-person__user"
-                  />1749 Wheeler Ridge Delaware</span
-                >
-                <span class="packages-person__guests">
-                  <img
-                    src="img/user.svg"
-                    alt="Icon: user"
-                    class="packages-person__user"
-                  />2 x Guests</span
-                >
-                <span class="packages-person__room"
-                  ><img
-                    src="img/home.svg"
-                    alt="Icon: home"
-                    class="packages-person__home"
-                  />1 x Room</span
-                >
-              </div>
-              <div class="packages-prise">
-                <span class="packages-price__old">$ 6,500</span>
-                <strong class="packages-price__new">$ 3,500</strong>
-              </div>
-              <button class="packages-card__button">Book Now</button>
-            </div>
-          </div>
-          <!--/.card-->
-        </div>
-        <!-- /.packages-wrapper -->
-      </div>
-      <!-- /.container -->
-    </section>
-    <!-- /.packages -->
 
     <section class="newsletter">
       <div class="newsletter-wrapper">
@@ -1087,8 +842,6 @@
       <!-- /.modal__dialog -->
     </div>
     <!-- /.modal -->
-
-    <script src="https://api-maps.yandex.ru/2.1/?apikey=ce1dd235-e572-4749-895b-1a4eca042bcb&lang=ru_RU"></script>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/parallax.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
