--- a/index.html
+++ b/index.html
@@ -819,11 +819,12 @@
     <footer class="footer">
       <div class="container">
         <div class="footer-wrapper">
-          <img
-            src="img/vertical-logo.svg"
-            alt="Logo: Best tour plan"
-            class="logo footer__logo"
-          />
+          <a href="#" class="footer__logo">
+            <img
+              src="img/vertical-logo.svg"
+              alt="Logo: Best tour plan"
+              class="logo footer__logo-img"
+          /></a>
           <div class="footer__list footer__categories">
             <h3 class="footer__title">ALL CATEGORIES</h3>
             <ul class="footer__ul">
@@ -945,8 +946,10 @@
                     class="footer__icon"
                   />
                 </div>
-                9748 Blossom Hill Rd undefined Lansing,&nbsp;Idaho 68545 United
-                States
+                <a href="#" class="footer__link">
+                  9748 Blossom Hill Rd undefined Lansing,&nbsp;Idaho 68545
+                  United States
+                </a>
               </li>
               <li class="footer__item footer__item--mb-2">
                 <div class="footer__image">
@@ -956,10 +959,12 @@
                     class="footer__icon"
                   />
                 </div>
-                Tel (business hours) : 269 1500 Tel&nbsp;(hotline)&nbsp;Monday -
-                Saturday:<br />
-                52-56-61-38 (08:00 am – 20:00 pm) Tel&nbsp;(hotline) Sunday:<br />
-                52-56-61-38 (08:00 am – 14:00 pm)
+                <a href="#" class="footer__link">
+                  Tel (business hours) : 269 1500
+                  <br />Tel&nbsp;(hotline)&nbsp;Monday - Saturday: 52-56-61-38
+                  (08:00 am – 20:00 pm) Tel&nbsp;(hotline) Sunday: 52-56-61-38
+                  (08:00 am – 14:00 pm)</a
+                >
               </li>
               <li class="footer__item footer__item--mb-2">
                 <div class="footer__image">
@@ -969,7 +974,9 @@
                     class="footer__icon"
                   />
                 </div>
-                cherly.lawson@example.com
+                <a href="#" class="footer__link">
+                  cherly.lawson@example.com
+                </a>
               </li>
             </ul>
           </div>
@@ -1101,11 +1108,11 @@
       }
       window.onload = init;
     </script>
-    <script dref src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
-    <script dref src="js/jquery.mask.min.js"></script>
-    <script dref src="js/jquery.validate.min.js"></script>
-    <script dref src="js/aos.js"></script>
+    <script src="js/jquery.mask.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/aos.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
