--- a/thankyou.html
+++ b/thankyou.html
@@ -146,10 +146,10 @@
         <div class="hotel-info">
           <div class="hotel-info__text">
             <div class="hotel-wrapper">
-              <h1 class="hotel-name hotel-info__name">Сообщение отправлено!</h1>
+              <h1 class="hotel-name hotel-info__name">The message was sent!</h1>
             </div>
             <p class="hotel-discription hotel-info__discription">
-              Ваша заявка будет обработана в течение 5 минут.
+              Your request will be processed within 5 minutes.
             </p>
           </div>
           <!-- /.hotel-info__left -->
@@ -312,36 +312,7 @@
             </ul>
           </div>
           <!-- /.footer__contact-details -->
-          <div class="footer__contact-form">
-            <h3 class="footer__title footer__title--mb-3">Send us a message</h3>
-            <form action="send.php" method="POST" class="footer__forma">
-              <input
-                type="text"
-                class="input footer__input"
-                placeholder="Your Full Name*"
-                name="name"
-              />
-              <input
-                type="text"
-                class="input footer__input"
-                placeholder="Phone Number*"
-                name="phone"
-              />
-              <textarea
-                class="footer__message"
-                cols="30"
-                rows="4"
-                placeholder="Message"
-                name="message"
-              ></textarea>
-              <div class="footer__send">
-                <button class="button footer__button" type="submit">
-                  Send
-                </button>
-                <span class="footer__info">* Required&nbsp;Fields</span>
-              </div>
-            </form>
-          </div>
+
           <!-- /.footer__contact-form -->
           <div class="footer__conditions">
             <ul class="footer__ul footer__ul--rules">
